fix: forsaken buttons on mobile

--- a/src/drive/mobile/styles/feedback.styl
+++ b/src/drive/mobile/styles/feedback.styl
@@ -1,5 +1,14 @@
 @require 'cozy-ui'
 
+.c-btn
+    @extend $button
+
+.c-btn--regular
+    @extend $button--regular
+
+.c-btn--secondary
+    @extend $button--secondary
+
 .feedback-form
     @extend $form
 
